Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-761

can't load more then 3 remap plugins

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 2.1.8
    • 2.1.9
    • Remap API
    • None
    • Fedora Core 14 x64

    Description

      In UrlRewrite.cc:1453 plugin_found_at for the argc offset is not set properly for the 3 and subsequent plugin loads.

      [May 6 09:53:02.826] Server

      {4145219296} ERROR: Cant have more than 15 remap
      handles!arameters for /home/y/libexec/yts/mdbm_remap.so: [2]c/yts/mdbm_remap.so

      Debug loading plugins (bad):
      [May 6 09:53:02.751] Server {4145219296}

      DEBUG: (url_rewrite) Adding handle: b5af298 to instance map for plugin:
      b5b0250 (/home/y/libexec/yts/regex_remap.so) [cur:1]
      [May 6 09:53:02.758] Server

      {4145219296} DEBUG: (url_rewrite) Adding handle: b5ae4a8 to instance map for plugin:
      b5b50e8 (/home/y/libexec/yts/mdbm_remap.so) [cur:2]
      [May 6 09:53:02.763] Server {4145219296}

      DEBUG: (url_rewrite) Adding handle: b5b5e38 to instance map for plugin:
      b5b50e8 (/home/y/libexec/yts/mdbm_remap.so) [cur:3]
      [May 6 09:53:02.769] Server

      {4145219296} DEBUG: (url_rewrite) Adding handle: b5ae138 to instance map for plugin:
      b5b50e8 (/home/y/libexec/yts/mdbm_remap.so) [cur:4]
      [May 6 09:53:02.774] Server {4145219296}

      DEBUG: (url_rewrite) Adding handle: b5b1b80 to instance map for plugin:
      b5b50e8 (/home/y/libexec/yts/mdbm_remap.so) [cur:5]
      [May 6 09:53:02.779] Server

      {4145219296} DEBUG: (url_rewrite) Adding handle: b5b1b48 to instance map for plugin:
      b5b50e8 (/home/y/libexec/yts/mdbm_remap.so) [cur:6]
      [May 6 09:53:02.785] Server {4145219296}

      DEBUG: (url_rewrite) Adding handle: b5ae2a8 to instance map for plugin:
      b5b50e8 (/home/y/libexec/yts/mdbm_remap.so) [cur:7]
      [May 6 09:53:02.790] Server

      {4145219296} DEBUG: (url_rewrite) Adding handle: b5b8988 to instance map for plugin:
      b5b50e8 (/home/y/libexec/yts/mdbm_remap.so) [cur:8]
      [May 6 09:53:02.795] Server {4145219296}

      DEBUG: (url_rewrite) Adding handle: b5b8a10 to instance map for plugin:
      b5b50e8 (/home/y/libexec/yts/mdbm_remap.so) [cur:9]
      [May 6 09:53:02.800] Server

      {4145219296} DEBUG: (url_rewrite) Adding handle: b5b8ac0 to instance map for plugin:
      b5b50e8 (/home/y/libexec/yts/mdbm_remap.so) [cur:10]
      [May 6 09:53:02.805] Server {4145219296}

      DEBUG: (url_rewrite) Adding handle: b5b91a8 to instance map for plugin:
      b5b50e8 (/home/y/libexec/yts/mdbm_remap.so) [cur:11]
      [May 6 09:53:02.811] Server

      {4145219296} DEBUG: (url_rewrite) Adding handle: b5b9dd8 to instance map for plugin:
      b5b50e8 (/home/y/libexec/yts/mdbm_remap.so) [cur:12]
      [May 6 09:53:02.816] Server {4145219296}

      DEBUG: (url_rewrite) Adding handle: b5b9218 to instance map for plugin:
      b5b50e8 (/home/y/libexec/yts/mdbm_remap.so) [cur:13]
      [May 6 09:53:02.821] Server

      {4145219296}

      DEBUG: (url_rewrite) Adding handle: b5b92c8 to instance map for plugin:
      b5b50e8 (/home/y/libexec/yts/mdbm_remap.so) [cur:14]

      Attachments

        Activity

          People

            bcall Bryan Call
            bcall Bryan Call
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: