TS-761 Fixed bug where 3 remap plugins couldn't be loaded.

git-svn-id: https://svn.apache.org/repos/asf/trafficserver/traffic/trunk@1100365 13f79535-47bb-0310-9956-ffa450edef68